Fixes for toasts too high

--- a/styles.css
+++ b/styles.css
@@ -1312,9 +1312,11 @@ main.main--weekmenu {
 /* Toast */
 .toast {
     position: fixed;
-    bottom: 90px;
+    top: 0;
+    bottom: auto;
     left: 50%;
-    transform: translateX(-50%) translateY(12px);
+    height: auto;
+    transform: translateX(-50%) translateY(-12px);
     background: #222;
     color: white;
     padding: 10px 20px;
